styles.css
body {
    font-family: 'Arial', sans-serif;
    margin: 0;
    padding: 0;
}

.footer{
    display: none;
    background-color: #333;
    color: #fff;
    padding: 20px;
    text-align: center;
    position: relative;
    bottom: 0;
    width: 100%;
    

}

.body{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
    overflow: auto;
    position: relative;
    z-index: 1;
    flex: 1;
}

.hero{
    display: flex;
    flex-direction: column;
    z-index: 1 ;
    background-color: #002040;
    color: #fff;
    position: relative;
    width: 100%;
    min-height: 100vh;
}

.logo-image{
    width: 70px;
    height: 70px;
    border-radius: 50%;
    border: 2px solid #fff;
    padding: 10px;
    transition:  1s ease-in-out;
}

.logo-image:hover{
    animation: spin 10s linear infinite;
    animation-fill-mode: forwards;
    transition:  1s ease-in-out;
}

.hero nav{
    /* background-color: black; */
    display: flex;
    flex-direction: row;
    width: 100%;
    justify-content: space-between;
    padding: 30px 0;

}

nav ul li a{
    color: #fff;
    text-decoration: none;
    font-size: 18px;
    font-weight: bold;
    text-transform: uppercase;
    padding: 10px 15px;
    border-radius: 5px;
    transition: all .3s ease-in-out;
}

nav ul li a:hover{
    color: #f00;
    transition: all .3s ease-in-out;
}



.hero nav ul{
    display: flex;
    flex-direction: row;
    list-style: none;
    margin: 0;
    padding: 0;
    gap: 20px;
    align-items: center;
}

.menu-icon{
    display: none;
    flex-direction: row;
    margin: 0;
    padding: 0;
    align-items: center;
}

.menu-icon i{
    color: #fff;
    font-size: 30px;
    padding: 10px 15px;
    border-radius: 5px;
    transition: all .3s ease-in-out;
}

.menu-icon i:hover {
    color: #f00;
    transition: all .3s ease-in-out;
}

.heading h1{
    margin: a;
    padding: 10px 15px;
    text-align: center;
    margin-top: 20vh;
}

.hero h2{

    padding: 10px 15px;
    margin-top: 20px;
    color: rgba(255, 255, 255, 0.3);
    letter-spacing: 5px;
}

.description {
    color: rgba(255, 255, 255, 0.5);
    /* text-align: center; */
    margin-top: 20px;
    letter-spacing: 2px;
    font-size: 20px;
    font-weight: 100;
    text-transform: capitalize;
    padding: 10px 15px;
    border-radius: 5px;
    transition: all 0.3s ease-in-out;
    width: 84%;
    background: rgba(0, 0, 0, 0.3);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    line-height: 1.5;
}

.socials{

    display: flex;
    flex-direction: row;
    list-style: none;
    margin: 0;
    padding: 0 20px;
    gap: 20px;
    align-items: center;
    

}


.socials i{
  
    color: rgba(255, 255, 255, 0.5);
    text-decoration: none;
    font-size: 50px;
    font-weight: bold;
    text-transform: uppercase;
    padding: 10px 15px;
    border-radius: 5px;
    transition: all .3s ease-in-out;

}



.socials i:hover{
    color: #fff;
    transition: all .3s ease-in-out;
    transform: translate(0px, -10px);
    text-shadow: #00f 0px 0px 10px;
} 

.left{
    width: 50%;
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
    overflow: hidden;
    transition: all .3s ease-in-out;
    
   
}

.right{
    width: 50%;
    height: auto;
}


.r-bg{
    width: 50%;
    height: 100%;
    object-fit: fill;
    position: absolute;
    transition: all .3s ease-in-out;

}

.r-fg{
    height: 100%;
    position: absolute;
    z-index: 2;
    transform: translate(30%, 0%);
    transition: all .3s ease-in-out;
}

.right:hover .r-fg{
    transform: translate(0%, 0%);
    transition: all .3s ease-in-out;
}

.right:hover .r-bg{
    transform: translate(0%, -3%);
    transition: all .3s ease-in-out;
}

/* create a spinnign animation */
@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);

    }
}

/* Extra small devices (phones) */
@media only screen and (max-width: 900px) {
    /* Your CSS rules for extra small screens go here */

    .hero nav ul{
        display: none;
    }
    .description {
        color: rgba(255, 255, 255, 0.5);
        /* text-align: center; */
        margin-top: 20px;
        letter-spacing: 2px;
        font-size: 20px;
        font-weight: 100;
        text-transform: capitalize;
        padding: 10px 15px;
        border-radius: 5px;
        transition: all 0.3s ease-in-out;
        width: 100%;
        background: rgba(0, 0, 0, 0.3);
        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
        line-height: 1.5;
    }

    .hero{
        width: 100%;
        height: auto;
    }

    .left{
        width: 100%;
        height: 100%;
    }
    .right{
        display: none;
        width: 0;
    }

    .footer{
        display:block;
    }
    .menu-icon{
        display: flex;
        flex-direction: row;
        margin: 0;
        padding: 0;
        align-items: center;
        justify-content: center;
    }
}

/* Small devices (tablets) */
@media only screen and (min-width: 901px) and (max-width: 1080px) {
    /* Your CSS rules for small screens go here */

    .hero nav ul{
        
    }

    .hero{
        width: 100%;
        height: auto;
    }


    .left{
        width: 100%;
        height: 100%;
    }
    .right{
        display: none;
        width: 0;
    }
    .footer{
        display:block;
    }
}

/* https://amstylescodes.web.app/#socialmedia */

